@@ -622,8 +622,8 @@ FSETSVO:=$(FSETSBASEVO) $(FSETS_$(FSETS))
 ALLFSETS:=$(FSETSBASEVO) $(FSETS_all)
 
 RELATIONSVO:=$(addprefix theories/Relations/, \
- Newman.vo 		Operators_Properties.vo	Relation_Definitions.vo \
- Relation_Operators.vo 	Relations.vo 		Rstar.vo )
+ Operators_Properties.vo	Relation_Definitions.vo \
+ Relation_Operators.vo 		Relations.vo )
 
 WELLFOUNDEDVO:=$(addprefix theories/Wellfounded/, \
  Disjoint_Union.vo 	Inclusion.vo 	Inverse_Image.vo \
