@@ -59,7 +59,7 @@ invocation of \Coq\ delivers a message such as:
 \begin{flushleft}
 \begin{verbatim}
 unix:~> coqtop
-Welcome to Coq trunk (Jun. 2008)
+Welcome to Coq 8.2 (Sep. 2008)
 
 Coq < 
 \end{verbatim}
